--- a/references.bib
+++ b/references.bib
@@ -25,3 +25,10 @@ vergleichende Untersuchung der Kinetiken von
 }
  
 @misc{Mansoor_Mahabadi_2023, title={Volume of distribution}, url={https://www.ncbi.nlm.nih.gov/books/NBK545280/}, journal={StatPearls [Internet].}, publisher={U.S. National Library of Medicine}, author={Mansoor, Asad and Mahabadi, Navid}, year={2023}, month={Jul}} 
+
+@misc{quantile_reg,
+  author = {Katchova, A.},
+  title = {Quantile Regression},
+  year = {2013},
+  howpublished = {The Econometrics Academy}
+}
